<resources>
    <string name="app_name">BlockIfDrunk</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="user">Correo</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesion</string>
    <string name="signUp">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="emptyFields">Llene los campos vacios</string>
    <string name="confirmPassword">Contraseña incorrecta, vuelva a intentar</string>
    <string name="confirmEmail">Email enviado a su correo, verifique su cuenta por favor.</string>

    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre">Nombre</string>
    <string name="celular">Celular</string>
    <string name="colonia">Colonia</string>
    <string name="calle_y_numero">Calle y Numero</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="agregar">Agregar</string>
    <string name="contactos_bloqueados">Contactos Bloqueados</string>
    <string name="desconectar">Desconectar</string>
    <string name="dispositivos_encontrados">Dispositivos Encontrados</string>
    <string name="telefono">Telefono</string>
    <string name="horas_a_bloquear">Horas a bloquear:</string>
    <string name="encender">Encender</string>
    <string name="encender_carro">Encender Carro</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="historial">Historial</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

    <string name="myService">BackgroundService</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instructions">Intrucciones</string>
    <string name="breathAnalysis">Por favor sople al alcoholimetro y presione ok para avanzar.</string>
    <string name="good_trip">Buen viaje</string>
    <string name="cancel">Cancelar</string>
    <string name="sms_p1">"Estoy cerca de "</string>
    <string name="longitud">"Longitud: "</string>
    <string name="sms_p2">necesito tu ayuda, en mi estado no puedo conducir, ven a recogerme. *Mensaje de prueba</string>
    <string name="sms_success">Mensaje enviado</string>
    <string name="socket_failed">La creacción del Socket fallo</string>
    <string name="bluetooth_unsupported">El dispositivo no soporta bluetooth</string>
    <string name="connection_failed">La Conexión fallo</string>
    <string name="permission_denied">Permisiso denegado</string>
    <string name="wrong_pick">No elegiste el carro</string>
    <string name="bt_activated">Bluetooth Activado</string>
    <string name="saved">Guardado</string>
    <string name="empty_password">Contraseña Vacia</string>
    <string name="wrong_credentials">El correo o contraseña estan mal escritos</string>
    <string name="mail_unveryfied">Correo no verificado</string>
    <string name="password_reset">Correo enviado a su cuenta</string>
    <string name="registration_error">Error al Registrar</string>
    <string name="call">Llamar</string>
    <string name="block">Bloquear</string>
    <string name="bloquear_contactos">Bloquear Contactos</string>
    <string name="contactos">Contactos</string>
    <string name="blocks">Blocks</string>
    <string name="switch_to_english">Switch to English</string>
    <string name="contacto_de_emergencia">Contacto de emergencia</string>
    <string name="salvar">Salvar</string>
    <string name="warning">Advertencia</string>
    <string name="warning_message">Al utilizar esta funcion se te impedira acceder a tu app de contactos por el tiempo de bloqueo, por lo que para llamar utiliza la funcion de telefono y contactos de la aplicacion</string>
    <string name="ok">Entiendo</string>
    <string name="permission_1">Necesitas un permiso extra por la version de Android de tu telefono</string>
    <string name="permission_2">Necesitas dar permisos a la app para acceder a esta funcion</string>
    <string name="already_blocked">Contacto ya ha sido bloqueado</string>
    <string name="cannotBlock">No puedes bloquear a tu contacto de emergencia</string>
    <string name="alreadyAdded">El numero ya habia sido agregado</string>
    <string name="bro">App esta bloqueada</string>
    <string name="analizando_aliento">Analizando Aliento</string>
</resources>
