<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Principal">
        <menu>
            <item
                android:id="@+id/homeItem"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/encender_carro">

            </item>
            <item
                android:id="@+id/userItem"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/mi_cuenta">

            </item>
        </menu>
    </item>

    <item android:title="Lifeguard">
        <menu>
            <item
                android:id="@+id/lifeguardItem"
                android:icon="@drawable/ic_contacts_black_24dp"
                android:title="@string/bloquear_contactos">

            </item>


            <item
                android:id="@+id/contactsItem"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/contactos">

            </item>

            <!--
            <item
                android:id="@+id/appLockerItem"
                android:icon="@drawable/ic_contacts_black_24dp"
                android:title="App Locker">

            </item>
            !-->
        </menu>
    </item>

    <item android:title="Block If Drunk">
        <menu>
            <item
                android:id="@+id/phoneItem"
                android:icon="@drawable/ic_phone_black_24dp"
                android:title="@string/telefono">

            </item>

            <item
                android:id="@+id/contactsBlockedItem"
                android:icon="@drawable/ic_contacts_black_24dp"
                android:title="@string/blocks">
            </item>


            <item
                android:id="@+id/historialItem"
                android:icon="@drawable/ic_history_black_24dp"
                android:title="Drunk Events">

            </item>

        </menu>
    </item>

    <item android:title="Opciones">
        <menu>

            <item
                android:id="@+id/languageItem"
                android:icon="@drawable/ic_g_translate_black_24dp"
                android:title="@string/switch_to_english"
                >

            </item>
            <item
                android:id="@+id/bluetoothItem"
                android:icon="@drawable/ic_bluetooth_black_24dp"
                android:title="Bluetooth">

            </item>

            <item
                android:id="@+id/logoutItem"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/cerrar_sesion">

            </item>



        </menu>
    </item>




</menu>