<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".aplication.ui.home.user.UserFragment">


        <TextView
            android:id="@+id/textView17"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/calle_y_numero"
            app:layout_constraintStart_toStartOf="@+id/editTextCalle"
            app:layout_constraintTop_toBottomOf="@+id/editTextCalle" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/colonia"
            app:layout_constraintStart_toStartOf="@+id/editTextColonia"
            app:layout_constraintTop_toBottomOf="@+id/editTextColonia" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Nombre"
            app:layout_constraintStart_toStartOf="@+id/newUserName"
            app:layout_constraintTop_toBottomOf="@+id/newUserName" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/nombre"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/newUserName"
            app:layout_constraintEnd_toStartOf="@+id/newUserName"
            app:layout_constraintTop_toTopOf="@+id/newUserName"
            app:srcCompat="@drawable/ic_person_black_24dp"
            tools:ignore="VectorDrawableCompat" />


        <EditText
            android:id="@+id/editTextPhoneLifeguard"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Contacto de emergencia"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newUserName" />

        <ImageView
            android:id="@+id/imageViewEmergency"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextPhoneLifeguard"
            app:layout_constraintEnd_toStartOf="@+id/editTextPhoneLifeguard"
            app:layout_constraintTop_toTopOf="@+id/editTextPhoneLifeguard"
            app:srcCompat="@drawable/ic_phone_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/editTextColonia"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/colonia"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneLifeguard" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextColonia"
            app:layout_constraintEnd_toStartOf="@+id/editTextColonia"
            app:layout_constraintTop_toTopOf="@+id/editTextColonia"
            app:srcCompat="@drawable/ic_home_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:id="@+id/editTextCalle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/calle_y_numero"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextColonia" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextCalle"
            app:layout_constraintEnd_toStartOf="@+id/editTextCalle"
            app:layout_constraintTop_toBottomOf="@+id/editTextColonia"
            app:layout_constraintVertical_bias="0.666"
            app:srcCompat="@drawable/ic_streetview_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="8dp"
            android:text="Contacto de emergencia"
            app:layout_constraintStart_toStartOf="@+id/editTextPhoneLifeguard"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneLifeguard" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/saveButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="SignUp"
            android:text="Salvar"
            app:bootstrapBrand="primary"
            app:bootstrapSize="lg"

            app:buttonMode="regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:roundedCorners="true" />
<!--
        <Button
            android:id="@+id/deleteAccountButton"
            android:layout_width="236dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:onClick="toReset"
            android:text="Eliminar cuenta"
            android:textColor="@color/bootstrap_brand_danger"
            android:textSize="12sp"
            app:bootstrapBrand="danger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveButton" />
-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>